[package]
name = "avfork"
version = "0.1.0"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = 'thin'

[dependencies]
once_cell = "1.8.0"

[build-dependencies]
bindgen = "0.53.1"

[dev-dependencies]
assert_matches = "1.5.0"
