[package]
name = "avfork"
version = "0.1.0"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = 'thin'

[dependencies]
once_cell = "1.8.0"
libc = "0.2"
bitflags = "1.0"
cstr = "0.2.8"

crossbeam-queue = "0.3"                           # For mod StacksQueue
tokio = { version = "1.7.1", features = ["net"] } # For mod process
waitmap = "1.1.0"                                 # For mod SignalFd

[build-dependencies]
bindgen = "0.53.1"
once_cell = "1.8.0"

[dev-dependencies]
assert_matches = "1.5.0"
